<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_xxxlarge"
            android:layout_marginTop="@dimen/text_margin_large"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_security_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_xxxlarge"
            android:layout_marginTop="@dimen/text_margin_large"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/security_question"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_medium"
        android:orientation="vertical"
        android:paddingBottom="@dimen/review_image_big"
        android:paddingLeft="@dimen/review_image_big"
        android:paddingRight="@dimen/review_image_big">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/activity_margin_xxxxlarge"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_with_appanme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_margin_xmedium"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin_xlarge"
                    android:background="@drawable/border_et_round_gray"
                    android:gravity="center_vertical"
                    android:hint="@string/current_password_minimum_eight_character"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/text_margin_xmedium"
                    android:paddingLeft="@dimen/text_margin_medium"
                    android:paddingRight="@dimen/text_margin_medium"
                    android:paddingTop="@dimen/text_margin_xmedium"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighter_gray"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin_xmedium"
                    android:background="@drawable/border_et_round_gray"
                    android:gravity="center_vertical"
                    android:hint="@string/new_password_minimum_eight_character"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/text_margin_xmedium"
                    android:paddingLeft="@dimen/text_margin_medium"
                    android:paddingRight="@dimen/text_margin_medium"
                    android:paddingTop="@dimen/text_margin_xmedium"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighter_gray"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_retype_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin_xmedium"
                    android:background="@drawable/border_et_round_gray"
                    android:gravity="center_vertical"
                    android:hint="@string/re_type_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/text_margin_xmedium"
                    android:paddingLeft="@dimen/text_margin_medium"
                    android:paddingRight="@dimen/text_margin_medium"
                    android:paddingTop="@dimen/text_margin_xmedium"
                    android:scrollHorizontally="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighter_gray"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin_xlarge"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_change"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/text_margin_small"
                        android:layout_weight="1"
                        android:background="@drawable/btn_rounded"
                        android:gravity="center"
                        android:hint="@string/change"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/text_margin_small"
                        android:layout_weight="1"
                        android:background="@drawable/btn_rounded"
                        android:gravity="center"
                        android:hint="@string/close"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
