<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/forgot_pass_background"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height"
    android:layout_margin="@dimen/activity_margin_xxxlarge"
    android:layout_centerInParent="true">

<ImageView
    android:layout_width="@dimen/image_height_large"
    android:layout_height="@dimen/image_width_normal"
    android:id="@+id/logo_text"
    android:layout_marginTop="@dimen/text_margin_normal"
    android:layout_centerHorizontal="true"
    android:background="@drawable/logo_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reset"
            android:layout_marginTop="@dimen/activity_margin_xxxxlarge"
            android:layout_centerVertical="true"
            android:layout_below="@+id/logo_text"
            android:padding="@dimen/padding_small"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/forgotpass_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_margin_xlarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reset_two"
        android:layout_below="@+id/tv_reset"
        android:layout_marginLeft="@dimen/padding_small"
        android:layout_marginRight="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/forgotpass_text_two"
        android:textColor="@color/white"
        android:textSize="@dimen/text_margin_large" />


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:padding="@dimen/padding_large"
            android:layout_marginLeft="@dimen/text_margin_xlarge"
            android:layout_marginRight="@dimen/text_margin_xlarge"
            android:layout_height="@dimen/progressbar_width"
            android:textColorHint="@color/white"
            android:background="@drawable/edt_tx_border"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/text_size_large"
            android:layout_below="@+id/tv_reset_two"
            android:hint="@string/hint_email_forgot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_below="@+id/input_email"
        android:orientation="horizontal">
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_medium"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/text_size_large"
        android:text="@string/send"
        android:background="@drawable/bt_forgot_border"
        android:textColor="@color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/padding_medium"
            android:padding="@dimen/padding_large"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/text_size_large"
            android:text="@string/cancel"
            android:background="@drawable/bt_forgot_border"
            android:textColor="@color/white"/>
    </LinearLayout>


</RelativeLayout>
    </RelativeLayout>

</LinearLayout>